ウィンドウタイトルなどを修正

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>adjective_wp</title>
+    <title>Order of Adjectives in English</title>
   </head>
   <body>
     <div id="app"></div>
